--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     environment:
       SWAGGER_JSON: /docs/openapi.yaml
     volumes:
-      - ./backend/swagger:/docs:ro
+      - ./swagger:/docs:ro
