--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
+version: "3.9"
+
 services:
   swagger:
     image: swaggerapi/swagger-ui
     container_name: swagger_ui
     ports:
       - "4001:8080"
-    volumes:
-      - ./swagger:/docs:ro
     environment:
       SWAGGER_JSON: /docs/openapi.yaml
+    volumes:
+      - ./swagger:/docs:ro
