--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   swagger:
     image: swaggerapi/swagger-ui
@@ -9,4 +7,4 @@ services:
     environment:
       SWAGGER_JSON: /docs/openapi.yaml
     volumes:
-      - ./swagger:/docs:ro
+      - /data/compose/swagger_docker/swagger:/docs:ro
